...
            "state": "translated",
            "value": "Витрату видалено"
          }
        }
      }
    },
    "Expenses": {
      "localizations": {
        "uk": {
          "stringUnit": {
            "state": "translated",
            "value": "Витрати"
          }
...
            "state": "translated",
            "value": "Яка категорія?"
          }
        }
      }
    },
    "Yearly": {
      "localizations": {
        "uk": {
          "stringUnit": {
            "state": "translated",
            "value": "Щороку"
          }
...
